# payward-casper

./: .gitignore  README.md
clawback/: .gitignore  README.md
clawback/clawback-agent/: package-lock.json  package.json
clawback/clawback-mcp/: package-lock.json  package.json
clawback/clawback-web/: demo-state.json  index.html  package.json  serve.mjs
fund402/: .env.example  .gitignore  CLAUDE.md  DEMO-SCRIPT.md  DEPLOYMENT.md  DORAHACKS.md  Odra.toml  README.md  RECORDING-SCRIPT.md  SETUP.md  STATUS.md  SUBMISSION.md  package-lock.json  package.json  tsconfig.json
fund402-agent/: .env.example  .gitignore  README.md  package-lock.json  package.json
fund402-agent-skills/: .gitignore  AGENTS.md  README.md  package.json  prompt.md  skills.sh.json
fund402-agent-skills/test/: skills.test.mjs
fund402-agent/src/: cli.mjs  config.mjs  index.mjs  tools.mjs
fund402-agent/test/: unit.test.mjs
fund402-dashboard/: .env.example  .gitignore  README.md  package-lock.json  package.json
fund402-dashboard/app/: DashboardClient.tsx  globals.css  layout.tsx  page.tsx  providers.tsx
fund402-dashboard/lib/: casper.ts  csprclick.ts  tx.ts  units.ts
fund402-dashboard/test/: lib.test.mjs
fund402-demo/: .env.example  README.md  package-lock.json  package.json
fund402-mcp/: README.md  claude_desktop_config.example.json  package-lock.json  package.json
fund402-sdk/: .gitignore  README.md  package-lock.json  package.json  tsconfig.json
fund402/contracts/fund402_vault/: Cargo.toml  rust-toolchain.toml
fund402/contracts/fund402_vault/src/: lib.rs
(+87 files in other folders)
